<resources>
    <string name="app_name">MalwarebytesTrial</string>
    <string name="new_scan">New scan</string>
    <string name="a_z">A-Z</string>
    <string name="date">Date</string>
    <string name="type">Type</string>
    <string name="save_results">Save results</string>
    <string name="highlighted_text">highlight text</string>
    <string name="created_at">Created at: %s</string>
    <string name="last_modified">Last modified: %s</string>
    <string name="file_size">File size: %.3f kB</string>
    <string name="sort_by">Sort by:</string>
    <string name="find">Find</string>
</resources>