<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/sortByTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/sort_by"
        android:textAllCaps="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/azSortButton"
        android:elevation="1dp"/>

    <Button
        android:id="@+id/azSortButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/a_z"
        android:textAllCaps="false"
        app:layout_constraintLeft_toRightOf="@id/sortByTV"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="1dp"/>

    <Button
        android:id="@+id/chronoSortButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/date"
        android:textAllCaps="false"
        app:layout_constraintLeft_toRightOf="@id/azSortButton"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="1dp"/>

    <Button
        android:id="@+id/extensionSortButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/type"
        android:textAllCaps="false"
        app:layout_constraintLeft_toRightOf="@id/chronoSortButton"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="1dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:listitem="@layout/recyclerview_item"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/azSortButton"
        app:layout_constraintBottom_toTopOf="@id/editText"/>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/save_results"
        android:textAllCaps="false"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:elevation="1dp"/>

    <Button
        android:id="@+id/scanButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/new_scan"
        android:textAllCaps="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:elevation="1dp"/>

    <Button
        android:id="@+id/findButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/find"
        android:textAllCaps="false"
        app:layout_constraintRight_toLeftOf="@id/saveButton"
        app:layout_constraintBottom_toBottomOf="parent"
        android:elevation="1dp"/>

    <EditText
        android:id="@+id/editText"
        android:hint="@string/highlighted_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/scanButton"
        app:layout_constraintRight_toLeftOf="@id/findButton"
        android:maxLines="1"
        android:elevation="1dp"
    />

    <RelativeLayout
        android:id="@+id/progressBarHolder"
        android:animateLayoutChanges="true"
        android:visibility="gone"
        android:background="#99AAAAAA"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:elevation="2dp"
        >

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:background="#88383838"
            android:layout_centerInParent="true"
            android:focusable="true"
            style="?android:attr/progressBarStyleLarge">
        </ProgressBar>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>